--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<span class="mui-tab-label">明细</span>
 			</a>
 			<a class="mui-tab-item" href="tab-list-charts.html">
-				<span class="mui-icon mui-icon-email"><span class="mui-badge">9</span></span>
+				<span class="mui-icon mui-icon-email"></span>
 				<span class="mui-tab-label">图表</span>
 			</a>
 			<a class="mui-tab-item" href="tab-list-add.html'">
@@ -99,7 +99,7 @@
 			});
 			 //当前激活选项
 			var activeTab = subpages[0];
-			var title = document.getElementById("title");
+
 			 //选项卡点击事件
 			mui('.mui-bar-tab').on('tap', 'a', function(e) {
 				var targetTab = this.getAttribute('href');
