添加图表页

--- a/tab-list-detail.html
+++ b/tab-list-detail.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="css/mui.min.css">
 		<link rel="stylesheet" href="css/app.css">
 		<style>
+			
 			.det-title{
 				padding: 12px 0;
 				border-bottom: 1px solid #d9d9d9;
@@ -21,8 +22,6 @@
 				padding: 0;
 				display: inline-block;
 			}
-	
-			
 			.det-title>li:nth-child(1) {
 
 				width: 26%;
@@ -63,6 +62,62 @@
 	<body>
 
 		<ul class="det-title">
+			<li class="">
+				<span>2017年</span>
+				<div class="chos-date">03<span class="sub-text">月&nbsp;v</span></div>
+			</li>
+			<li class="">
+				<span>支出&nbsp;(元)</span>
+				<div>8.00</div>
+			</li>
+			<li class="">
+				<span>收入&nbsp;(元)</span>
+				<div>7.00</div>
+			</li>
+		</ul>
+				<ul class="det-title">
+			<li class="">
+				<span>2017年</span>
+				<div class="chos-date">03<span class="sub-text">月&nbsp;v</span></div>
+			</li>
+			<li class="">
+				<span>支出&nbsp;(元)</span>
+				<div>8.00</div>
+			</li>
+			<li class="">
+				<span>收入&nbsp;(元)</span>
+				<div>7.00</div>
+			</li>
+		</ul>
+				<ul class="det-title">
+			<li class="">
+				<span>2017年</span>
+				<div class="chos-date">03<span class="sub-text">月&nbsp;v</span></div>
+			</li>
+			<li class="">
+				<span>支出&nbsp;(元)</span>
+				<div>8.00</div>
+			</li>
+			<li class="">
+				<span>收入&nbsp;(元)</span>
+				<div>7.00</div>
+			</li>
+		</ul>
+				<ul class="det-title">
+			<li class="">
+				<span>2017年</span>
+				<div class="chos-date">03<span class="sub-text">月&nbsp;v</span></div>
+			</li>
+			<li class="">
+				<span>支出&nbsp;(元)</span>
+				<div>8.00</div>
+			</li>
+			<li class="">
+				<span>收入&nbsp;(元)</span>
+				<div>7.00</div>
+			</li>
+		</ul>
+				<ul class="det-title">
 			<li class="">
 				<span>2017年</span>
 				<div class="chos-date">03<span class="sub-text">月&nbsp;v</span></div>
