--- a/index.html
+++ b/index.html
@@ -7,135 +7,232 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-
 		<link rel="stylesheet" href="css/mui.min.css">
 		<link rel="stylesheet" href="css/app.css">
 		<style>
-				#add-icon{
-					width: 60px;
-					height: 60px;
-					background: #F7F7F7;
-					position: absolute;
-					margin-left: -30px;
-					top: -30px;
-					left: 50%;
-					border-radius: 50%;
-					border-top: 1px solid #B7B7BB;
-				}
-				#add-icon>div{
-					overflow: hidden;
-					width: 50px;
-					height: 50px;
-					position: absolute;
-					top: 5px;
-					left: 5px;
-					background:url(img/add-icon.gif) no-repeat ;
-					background-position: center;
-					background-size: cover;
-				}
-				.mui-tab-label{
-					padding-top:7px ;
-				}
+			#add-icon {
+				width: 60px;
+				height: 60px;
+				background: #F7F7F7;
+				position: absolute;
+				margin-left: -30px;
+				top: -30px;
+				left: 50%;
+				border-radius: 50%;
+				border-top: 1px solid #B7B7BB;
+			}
+			
+			#add-icon>div {
+				overflow: hidden;
+				width: 50px;
+				height: 50px;
+				position: absolute;
+				top: 5px;
+				left: 5px;
+				background: url(img/add-icon.gif) no-repeat;
+				background-position: center;
+				background-size: cover;
+			}
+			
+			.mui-tab-label {
+				padding-top: 7px;
+			}
+			/*明细*/
+			
+			.det-title {
+				padding: 8px 0;
+				border-bottom: 1px solid #d9d9d9;
+				background: #FFFFFF;
+				margin: 0;
+			}
+			
+			.det-title>li {
+				padding: 0;
+				display: inline-block;
+			}
+			
+			.det-title>li:nth-child(1) {
+				width: 26%;
+			}
+			
+			.det-title>li:nth-child(2) {
+				width: 35%;
+			}
+			
+			.det-title>li:nth-child(3) {
+				width: 35%;
+			}
+			
+			.det-title>li>span {
+				display: block;
+				font-size: 14px;
+				color: #979797;
+				text-align: center;
+			}
+			
+			.det-title>li>div {
+				margin: 5px 0;
+				height: 36px;
+				line-height: 40px;
+				font-size: 24px;
+				text-align: center;
+				color: #000;
+			}
+			
+			.chos-date {
+				margin-right: -1px;
+				border-right: 1px solid #7e7e7e;
+			}
+			
+			.sub-text {
+				font-size: 18px;
+			}
+			
+			.chart {
+				height: 200px;
+				margin: 0px;
+				padding: 0px;
+			}
+			
+			h5 {
+				margin-top: 30px;
+				font-weight: bold;
+			}
+			
+			h5:first-child {
+				margin-top: 15px;
+			}
 		</style>
 	</head>
 
 	<body>
+		<!--标题-->
 		<header class="mui-bar mui-bar-nav">
-			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
 			<h1 id="title" class="mui-title">L-记账</h1>
 		</header>
-		<div class="hid-div">111</div>
+
+		<!--tab菜单-->
 		<nav class="mui-bar mui-bar-tab">
-			<a id="defaultTab" class="mui-tab-item mui-active" href="tab-list-detail.html'">
+			<a id="defaultTab" class="mui-tab-item mui-active" href="#detail">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">明细</span>
 			</a>
-			<a class="mui-tab-item" href="tab-list-charts.html">
+			<a class="mui-tab-item" href="#charts">
 				<span class="mui-icon mui-icon-email"></span>
 				<span class="mui-tab-label">图表</span>
 			</a>
-			<a class="mui-tab-item" href="tab-list-add.html'">
+			<a class="mui-tab-item" href="#" id="add-bill">
 				<div id="add-icon">
 					<div></div>
 				</div>
 				<span class="mui-icon"></span>
 				<span class="mui-tab-label">记账</span>
 			</a>
-			<a class="mui-tab-item" href="tab-list-find.html'">
+			<a class="mui-tab-item" href="#find">
 				<span class="mui-icon mui-icon-gear"></span>
 				<span class="mui-tab-label">发现</span>
 			</a>
-			<a class="mui-tab-item" href="tab-list-setting.html'">
+			<a class="mui-tab-item" href="#setting">
 				<span class="mui-icon mui-icon-gear"></span>
 				<span class="mui-tab-label">设置</span>
 			</a>
 		</nav>
-		<script src="js/mui.min.js"></script>
-		<script type="text/javascript" charset="utf-8">
-			 //mui初始化
-			mui.init();
-			var subpages = ['tab-list-detail.html', 'tab-list-charts.html', 'tab-list-add.html', 'tab-list-find.html', 'tab-list-setting.html'];
-			var subpage_style = {
-				top: '45px',
-				bottom: '51px'
-			};
-			
-			var aniShow = {};
-			
-			 //创建子页面，首个选项卡页面显示，其它均隐藏；
-			mui.plusReady(function() {
-				var self = plus.webview.currentWebview();
-				for (var i = 0; i < 4; i++) {
-					var temp = {};
-					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
-					if (i > 0) {
-						sub.hide();
-					}else{
-						temp[subpages[i]] = "true";
-						mui.extend(aniShow,temp);
-					}
-					self.append(sub);
-				}
-			});
-			 //当前激活选项
-			var activeTab = subpages[0];
+		<div class="mui-content">
+			<div id="detail" class="mui-control-content mui-active">
 
-			 //选项卡点击事件
-			mui('.mui-bar-tab').on('tap', 'a', function(e) {
-				var targetTab = this.getAttribute('href');
-				if (targetTab == activeTab) {
-					return;
-				}
-				//更换标题
-//				title.innerHTML = this.querySelector('.mui-tab-label').innerHTML;
-				//显示目标选项卡
-				//若为iOS平台或非首次显示，则直接显示
-				if(mui.os.ios||aniShow[targetTab]){
-					plus.webview.show(targetTab);
-				}else{
-					//否则，使用fade-in动画，且保存变量
-					var temp = {};
-					temp[targetTab] = "true";
-					mui.extend(aniShow,temp);
-					plus.webview.show(targetTab,"fade-in",300);
-				}
-				//隐藏当前;
-				plus.webview.hide(activeTab);
-				//更改当前活跃的选项卡
-				activeTab = targetTab;
+				<ul class="det-title">
+					<li class="">
+						<span>2017年</span>
+						<div class="chos-date">03<span class="sub-text">月&nbsp;v</span></div>
+					</li>
+					<li class="">
+						<span>支出&nbsp;(元)</span>
+						<div>8.00</div>
+					</li>
+					<li class="">
+						<span>收入&nbsp;(元)</span>
+						<div>7.00</div>
+					</li>
+				</ul>
+				<div id="status"></div>
+			</div>
+			<div id="charts" class="mui-control-content ">
+				<div class="mui-content">
+					<div class="mui-content-padded">
+						<h5>线图示例</h5>
+						<div class="chart" id="lineChart"></div>
+					</div>
+				</div>
+			</div>
+			<div id="setting" class="mui-control-content">
+				<div class="title">这是div模式选项卡中的第4个子页面，该页面展示一个常见的设置示例.</div>
+				<ul class="mui-table-view">
+					<li class="mui-table-view-cell">
+						<a class="mui-navigate-right">
+							新消息通知
+						</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a class="mui-navigate-right">
+							隐私
+						</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a class="mui-navigate-right">
+							通用
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div id="find" class="mui-control-content">
+				<div class="title">这是div模式选项卡中的第4个子页面，该页面展示一个常见的设置示例.</div>
+				<ul class="mui-table-view">
+					<li class="mui-table-view-cell">
+						<a class="mui-navigate-right">
+							通用
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
+		<!--菜单弹窗-->
+
+		<script src="js/mui.min.js"></script>
+		<script src="js/ldatabase.js"></script>
+		<script src="js/echarts-all.js"></script>
+		<script src="js/lecharts.js"></script>
+		<script src="js/app.js"></script>
+		<script type="text/javascript" charset="utf-8">
+			mui.init({
+				swipeBack: true //启用右滑关闭功能
 			});
-			 //自定义事件，模拟点击“明细选项卡”
-			document.addEventListener('gohome', function() {
-				var defaultTab = document.getElementById("defaultTab");
-				//模拟首页点击
-				mui.trigger(defaultTab, 'tap');
-				//切换选项卡高亮
-				var current = document.querySelector(".mui-bar-tab>.mui-tab-item.mui-active");
-				if (defaultTab !== current) {
-					current.classList.remove('mui-active');
-					defaultTab.classList.add('mui-active');
-				}
+			//本地数据库初始化
+			dataBase.init();
+
+			//测试插入数据
+			var data = [1, '水1费', -1];
+			dataBase.insertMenusTable(data);
+			var data = [2, '水2费', -1];
+			dataBase.insertMenusTable(data);
+			var data = [5, '水3费', -1];
+			dataBase.insertMenusTable(data);
+
+			//查询菜单表
+			dataBase.db.transaction(function(tx) {
+				tx.executeSql('SELECT * FROM MENUS', [], function(tx, results) {
+					res = results;
+					//					console.log(results.rows.length);
+				}, null);
 			});
+
+			//表格页
+			var byId = function(id) {
+				return document.getElementById(id);
+			};
+
+			var lineChart = echarts.init(byId('lineChart'));
+			lineChart.setOption(getOption('line'));
 		</script>
 	</body>
 
